fixed post layout issues; fixed colors for accessibility purposes

--- a/css/default.css
+++ b/css/default.css
@@ -490,7 +490,7 @@
 }
 
 .u-blog-section-2 {
-  padding: 80px 0;
+  padding: 2px 0;
 }
 
 .u-blog-section-1 {
@@ -498,7 +498,7 @@
 	min-height: 200px;
 	height: auto;
 	grid-gap: 22px;
-	padding: 30px 20px 10px 20px;
+	padding: 30px 20px 50px 20px;
 }
 
 .u-blog-section-1 .u-blog-text-1 {
